--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
-  "name": "ai毕业---智能论文写作助手",
+  "name": "ai-text-paraphraser",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "AI-powered text paraphrasing tool using DeepSeek API",
+  "author": "",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
-    "@google/genai": "^1.30.0",
-    "react": "^19.2.0",
     "lucide-react": "^0.555.0",
-    "react-dom": "^19.2.0"
+    "mammoth": "^1.11.0",
+    "pdf-parse": "^2.4.5",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "tesseract.js": "^7.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
