test: API 测试通过，禁用 Gemini 文档上传功能
✅ 测试结果:
- DeepSeek API 测试通过，文本改写功能正常
- Gemini API 不可用（中转 API 不支持）
- 构建测试通过

🔧 修改内容:
- 禁用 Gemini 文档上传功能
- 添加详细的错误日志
- 创建 API 测试工具（test-api.html, test-api.js）
- 添加 API 错误排查指南
- 修复 documentService.ts 语法错误
- 更新 .env.example 配置说明

📝 功能状态:
- ✅ 文本输入和改写（4种模式）
- ❌ 文档上传（暂时禁用）

🚀 可以部署到 Vercel

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,8 @@ VITE_GEMINI_MODEL=gemini-2.0-flash
 
 # 是否启用Gemini文档解析 (可选，默认为 true)
 # 如果不需要文档上传功能，设置为 false
-VITE_ENABLE_GEMINI_DOCUMENT_PROCESSING=true
+# 注意：某些中转 API 可能不支持 Gemini
+VITE_ENABLE_GEMINI_DOCUMENT_PROCESSING=false
 
 # Gemini API Configuration (用于文档解析和OCR)
 # 从 https://aistudio.google.com/app/apikey 获取你的 API Key
