feat: 完整支持DOCX格式输入输出
✨ 新功能:
- 支持上传.docx文件并自动提取文本
- 支持拖拽上传Word文档
- 支持下载为真正的.docx格式（使用docx库）
- 支持下载为.txt格式
- 显示文件信息（文件名、大小）

🔧 优化改进:
- 修复max_tokens计算不准确的问题
- 实现智能分段处理长文本
- 保持原文的段落结构和空行格式
- 增强AI Prompt以保持格式一致性
- 添加文件上传进度提示

📦 新增依赖:
- mammoth@1.11.0 - 读取docx文件
- docx@8.5.0 - 生成docx文件
- file-saver@2.0.5 - 下载文件

📝 新增文档:
- DOCX功能完整说明
- DOCX格式支持说明
- 保持原格式方案
- 快速测试指南
- 文本解析问题解决方案
- 格式测试样例

🎨 UI改进:
- 添加文件上传区域
- 优化下载按钮布局（Word/TXT分开）
- 添加文件信息卡片
- 改进错误提示

🐛 Bug修复:
- 修复环境变量访问错误（process.env → import.meta.env）
- 修复文本输出不完整的问题
- 修复格式丢失的问题

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "docx": "^9.5.1",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "lucide-react": "^0.555.0",
